2001-10-11  Per Bothner  <per@bothner.com>

	New package.
	* KawaServlet.java:  New class.
	* Makefile.am:  New.